# Midas

./: .gitignore  Cargo.toml  README.md  pyproject.toml  training.md
benchmark-ws/: .env.example  Cargo.toml  README.md  strategy.example.toml
benchmark-ws/src/: main.rs
config/: symbols.yaml
data/: ES.parquet
docs/: backtest-script.md  backtester_plan.md  fill_simulation_plan.md  implementation.md  ml_backend_rollout.md  parquet_ta_research.md  research_findings.md  serde_json_to_simd_json_report.md  task.md  todo_next_steps.md  tradovate_broker_owned_protection_policy.md  tradovate_protection_sync_engine_plan.md  tui_latency_profiling.md
docs/frontend_qol_tasks/: 001-fix-active-top-nav-state.md  002-align-train-analytics-back-link.md  003-prevent-accidental-training-submit.md  004-show-supported-training-backends.md  005-improve-collapsed-sidebars.md  006-add-ga-run-folder-picker.md  007-make-backtest-demo-state-unmistakable.md  008-wire-script-load-or-remove-disabled-button.md  009-link-validation-errors-to-fields.md  010-simplify-analyzer-setup-flow.md  011-highlight-selected-analyzer-cell.md  012-add-rl-chart-inspection-controls.md  013-clarify-rl-fitness-weight-controls.md  014-stabilize-training-log-timestamps.md
frontend/: package-lock.json  package.json  postcss.config.js  vite.config.ts
frontend/src/routes/: +layout.svelte  +page.svelte
ninjatrader-tui/: Cargo.toml  README.md  config.example.toml
ninjatrader-tui/src/: app.rs  automation.rs  config.rs  engine_control.rs  engine_registry.rs  ipc.rs  main.rs  strategy.rs  tradovate.rs
ninjatrader-tui/src/app/: core.rs  form.rs  helpers.rs  input.rs  mod.rs  render.rs  state.rs  views.rs
ninjatrader-tui/src/strategies/: ema_cross.rs  hma_angle.rs  mod.rs
ninjatrader-tui/src/tradovate/: execution.rs  gateway.rs  latency.rs  market.rs  mod.rs  orders.rs  protocol.rs  replay.rs  service.rs  session.rs  store.rs  types.rs
python/examples/: benchmark_policy_inference.py  check_mps.py  feature_dump.py  mlx_probe.py  train_ga.py  train_hybrid.py  train_ppo.py  train_stub.py
runs/pipeline_reports/es_candle_2026-03-15T08-31-09-392Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json  rl_fold_2.params.json  rl_fold_2.summary.json
runs/pipeline_reports/es_candle_2026-03-15T08-33-09-973Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json  rl_fold_2.params.json  rl_fold_2.summary.json
runs/pipeline_reports/es_candle_2026-03-15T08-43-08-762Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json  rl_fold_2.params.json  rl_fold_2.summary.json
runs/pipeline_reports/es_candle_2026-03-15T08-47-05-273Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T09-00-18-795Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T09-20-32-862Z/: ga_fold_1.params.json
runs/pipeline_reports/es_candle_2026-03-15T09-23-58-174Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T09-43-00-275Z/: ga_fold_1.params.json  ga_fold_1.summary.json
runs/pipeline_reports/es_candle_2026-03-15T09-52-02-384Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T09-54-15-387Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T17-12-11-565Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T17-20-33-925Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T17-20-33-926Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T21-11-03-127Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T21-21-49-772Z/: ga_fold_1.params.json
runs/pipeline_reports/es_candle_2026-03-15T21-22-39-980Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T22-01-02-572Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T22-14-19-404Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T22-16-15-303Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T22-27-17-997Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-15T22-31-31-761Z/: ga_fold_1.params.json  ga_fold_1.summary.json  pipeline_summary.json
runs/pipeline_reports/es_candle_2026-03-16T00-48-31-014Z/: pipeline_summary.json  rl_fold_2.params.json  rl_fold_2.summary.json
runs/pipeline_reports/es_f_ga_multifold_2026-03-15T22-51-00-761Z/: fold_1.params.json  fold_1.summary.json  fold_2.params.json  (+2 more)
runs_ga/: ga_log.csv
scripts/: cargo-build.py  cargo-build.sh  run_candle_ga_multifold_walkforward.mjs  run_candle_rl_multifold_walkforward.mjs  run_es_candle_walkforward.mjs  run_train_via_api.mjs  with-venv-libtorch.cmd  with-venv-libtorch.sh
src/: backtesting.rs  bars.rs  env.rs  features.rs  fill.rs  lib.rs  main.rs  ml.rs  parquet_loader.rs  sampler.rs
src/script/: mod.rs
trader/: .gitignore  Cargo.toml  README.md  config.example.toml
trader/docs/: CLOSEALL_RECOVERY_REVERSAL_RACE.md
trader/src/: config.rs  engine_control.rs  engine_registry.rs  engine_runtime.rs  ipc.rs  main.rs  replay_cache.rs  strategy.rs  strategy_debug.rs
(+235 files in other folders)
