[package]
name = "Midas"
version = "0.1.0"
edition = "2024"

[lib]
name = "midas_env"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
polars = { version = "0.51.0", features = ["csv", "parquet", "timezones"] }
anyhow = "1.0"
velora-ta = "0.0.1"
pyo3 = { version = "0.23", features = ["macros"], optional = true }
numpy = { version = "0.23", optional = true }
chrono = "0.4.38"
chrono-tz = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
csv = "1.3"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
tch = { version = "0.22.0" }
bincode = "1.3"
flate2 = { version = "1.1.5" }

[features]
default = []
python = ["pyo3/extension-module", "pyo3", "numpy"]
