[package]
name = "Midas"
version = "0.1.0"
edition = "2024"

[lib]
name = "midas_env"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
polars = { version = "0.51.0", features = ["csv", "parquet", "timezones"] }
anyhow = "1.0"
velora-ta = "0.0.1"
pyo3 = { version = "0.23", features = ["macros"], optional = true }
numpy = { version = "0.23", optional = true }
chrono = "0.4.38"
chrono-tz = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
csv = "1.3"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
tch = { version = "0.22.0", optional = true }
candle-core = { git = "https://github.com/huggingface/candle.git", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", optional = true }
burn = { version = "0.20.1", optional = true }
burn-ndarray = { version = "0.20.1", optional = true }
burn-cuda = { version = "0.20.1", optional = true }
burn-mlx = { git = "https://github.com/eidolons-ai/burn-mlx.git", branch = "burn-0-20", optional = true }
libloading = "0.8"
bincode = "1.3"
flate2 = { version = "1.1.5" }
mlua = { version = "0.9", features = ["lua54", "vendored"] }

[features]
default = []
python = ["pyo3/extension-module", "pyo3", "numpy"]
torch = ["tch"]
backend-burn = ["dep:burn", "dep:burn-ndarray"]
backend-burn-cuda = ["backend-burn", "dep:burn-cuda"]
backend-burn-mlx = ["backend-burn", "dep:burn-mlx"]
backend-candle = ["dep:candle-core", "dep:candle-nn"]
backend-candle-accelerate = ["backend-candle", "candle-core/accelerate"]
backend-candle-cuda = ["backend-candle", "candle-core/cuda"]
backend-mlx = []

[[bin]]
name = "train_ga"
path = "src/bin/train_ga.rs"

[[bin]]
name = "tch_mps_check"
path = "src/bin/tch_mps_check.rs"
required-features = ["torch"]

[[bin]]
name = "train_rl"
path = "src/bin/train_rl.rs"

[[bin]]
name = "backtest_script"
path = "src/bin/backtest_script.rs"
