[package]
name = "benchmark-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.9"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
dotenvy = "0.15"
futures-util = "0.3"
polars = { version = "0.51.0", features = ["parquet", "timezones"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
midas_env = { package = "Midas", path = ".." }
